<resources>
    <string name="app_name">Smart Kaksha</string>
    <string name="title_activity_student_select_cohort">StudentSelectCohort</string>
    <string name="select_concept">Select Concept</string>
    <string name="select_course">Select Course</string>
    <string name="select_cohort">Select Cohort:</string>
    <string name="start_session">Start_Session</string>
    <string name="download">DOWNLOAD</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">REMEMBER ME</string>
    <string name="forgotten_your_password">Forgotten your password?</string>
    <string name="login">Login</string>
    <string name="reset">Enter your email to reset you password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_new_password">Re-Enter New Password</string>
    <string name="enter_message">Enter Message</string>
    <string name="send_message">SEND MESSAGE</string>
    <string name="session">Session</string>
    <string name="completed">Completed</string>
    <string name="synced">Synced</string>
    <string name="session_1">Session 1</string>
    <string name="pending_session">Pending Session</string>
    <string name="not_synced">Not Synced</string>
    <string name="session_2">Session 2</string>
    <string name="session_3">Session 3</string>
    <string name="conduct_test_exam">Conduct Test/Exam</string>
    <string name="select_cohort">Select Cohort:</string>
    <string name="next">Next</string>
    <string name="select_subconcept">Select SubConcept</string>
    <string name="session">Session</string>
    <string name="synced">Synced</string>
    <string name="session_1">Session 1</string>
    <string name="not_synced">Not Synced</string>
    <string name="session_2">Session 2</string>
    <string name="perform_classroom_session">Perform Classroom Session</string>
    <string name="synchonize_data_with_cloud">Synchonize Data With Cloud</string>
    <string name="manage_curriculum">Manage Curriculum</string>
    <string name="view_student_s_performance">View Student\'s Performance</string>
    <string name="content">CONTENT</string>
    <string name="stop_session">Stop Session</string>
    <string name="pop_up_quiz">Pop-up Quiz</string>
    <string name="pause_session">Pause session</string>
    <string name="next_video">Next Video</string>
    <string name="test">Test</string>
    <string name="status">Status</string>
    <string name="test_1">Test 1</string>
    <string name="pending">Pending</string>
    <string name="test_2">Test 2</string>
    <string name="test_3">Test 3</string>
    <string name="address">Address</string>
    <string name="dob">DOB</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="emptyy">---------</string>
    <string name="cohort">Cohort</string>
    <string name="course">Course</string>
    <string name="student_id">Student Id</string>
    <string name="student_name">Student Name</string>
</resources>
