<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >
    <TableRow  android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textAlignment="center"
            android:background="@drawable/rounded_corners"
            android:textColor="@color/colorAccent"
            android:text="@string/session"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textAlignment="center"
            android:background="@drawable/rounded_corners"
            android:textColor="@color/colorAccent"
            android:text="@string/synced" />

    </TableRow>
    <TableRow android:padding="30dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/session_1"
            android:textAlignment="center"
            android:onClick="sync_session_1"
            android:background="@drawable/button_background"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/sync1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:background="@drawable/rounded_corners"
            android:textColor="@color/colorAccent"
            android:text="@string/not_synced" />

    </TableRow>
    <TableRow  android:padding="30dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/session_2"
            android:textAlignment="center"
            android:onClick="sync_session_2"
            android:background="@drawable/button_background"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:background="@drawable/rounded_corners"
            android:textColor="@color/colorAccent"
            android:text="@string/not_synced" />
    </TableRow>
    <TableRow android:padding="30dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="sync_session_3"
            android:textAlignment="center"
            android:text="@string/session_3"
            android:background="@drawable/button_background"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners"
            android:textColor="@color/colorAccent"
            android:text="@string/not_synced" />
    </TableRow>
</TableLayout>