<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_person_24"/>

        <TextView
            style="@style/CustomText"
            android:id="@+id/name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"

            android:text="@string/student_name" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        >
        <TextView
            style="@style/CustomText"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginRight="30dp"

            android:text="@string/student_id" />

        <TextView
            style="@style/CustomText"
            android:id="@+id/studentId_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"


            android:text='@string/emptyy' />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_marginLeft="5dp"
            style="@style/CustomText"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginRight="30dp"

            android:text="@string/course" />

        <TextView
            android:id="@+id/course_textview"
            style="@style/CustomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"


            android:text="@string/emptyy" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        >

        <TextView
            android:layout_marginLeft="5dp"
            style="@style/CustomText"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginRight="30dp"

            android:text="@string/cohort" />

        <TextView
            style="@style/CustomText"
            android:id="@+id/batch_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"


            android:text="B1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        >

        <TextView
            android:layout_marginLeft="5dp"
            style="@style/CustomText"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginRight="30dp"

            android:text="@string/dob" />

        <TextView
            style="@style/CustomText"
            android:id="@+id/dob_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"


            android:text="@string/dd_mm_yyyy" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        >

        <TextView
            android:layout_marginLeft="5dp"
            style="@style/CustomText"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginRight="30dp"

            android:text="@string/address" />

        <TextView
            style="@style/CustomText"
            android:id="@+id/add_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"


            android:text="@string/emptyy" />
    </LinearLayout>

</LinearLayout>


<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_marginTop="40dp"
android:paddingLeft="10dp"
android:paddingRight="10dp" >
<TableRow android:background="#0079D6" android:padding="5dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="TEST" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="SCORE" />

</TableRow>
<TableRow android:background="#DAE8FC" android:padding="5dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Test1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="64/100" />

</TableRow>
<TableRow android:background="#DAE8FC" android:padding="5dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Test2" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="83/100" />

</TableRow>
<TableRow android:background="#DAE8FC" android:padding="5dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Test3" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="75/100" />

</TableRow>
</TableLayout>
        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >
        <TableRow android:background="#0079D6" android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="COURSE" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="RATING" />

        </TableRow>
        <TableRow android:background="#DAE8FC" android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Course 1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="4/5" />

        </TableRow>

        <TableRow android:background="#DAE8FC" android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Course 2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2/5" />

        </TableRow>
        </TableLayout>
</LinearLayout>
</ScrollView>